--- a/src/sign/index.html
+++ b/src/sign/index.html
@@ -65,11 +65,25 @@
             margin: 10px 0;
             white-space: pre-wrap;
         }
+        .wallet-info {
+            margin-bottom: 20px;
+            padding: 10px;
+            background-color: #e8f5e9;
+            border-radius: 4px;
+        }
+        .wallet-address {
+            font-family: monospace;
+            word-break: break-all;
+        }
     </style>
 </head>
 <body>
     <h1>DAO Agenda Signature</h1>
     <div class="container">
+        <div class="wallet-info">
+            <h3>Connected Wallet</h3>
+            <p>Address: <span id="walletAddress" class="wallet-address">Not connected</span></p>
+        </div>
         <div class="form-group">
             <label for="agendaId">Agenda ID:</label>
             <input type="text" id="agendaId" placeholder="Enter agenda ID">
@@ -78,57 +92,101 @@
             <label for="transactionHash">Transaction Hash:</label>
             <input type="text" id="transactionHash" placeholder="Enter transaction hash">
         </div>
-        <button onclick="requestSignature()">Sign Message</button>
+        <button id="signButton" disabled>Sign Message</button>
+        <button id="connectButton">Connect Wallet</button>
         <div id="signatureResult"></div>
     </div>
 
     <script>
-        async function requestSignature() {
+        let currentAccount = null;
+
+        async function connectWallet() {
+            if (typeof window.ethereum !== 'undefined') {
+                try {
+                    const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+                    currentAccount = accounts[0];
+                    document.getElementById('walletAddress').textContent = currentAccount;
+                    document.getElementById('signButton').disabled = false;
+                    document.getElementById('connectButton').textContent = 'Connected';
+                    document.getElementById('connectButton').disabled = true;
+                } catch (error) {
+                    console.error('Error connecting wallet:', error);
+                    alert('Failed to connect wallet. Please try again.');
+                }
+            } else {
+                alert('Please install MetaMask to use this tool.');
+            }
+        }
+
+        async function signMessage() {
             const agendaId = document.getElementById('agendaId').value;
             const transactionHash = document.getElementById('transactionHash').value;
-            const signatureResult = document.getElementById('signatureResult');
 
             if (!agendaId || !transactionHash) {
                 alert('Please fill in all fields');
                 return;
             }
 
+            if (!currentAccount) {
+                alert('Please connect your wallet first');
+                return;
+            }
+
             const message = `I am the one who submitted agenda #${agendaId} via transaction ${transactionHash}. This signature proves that I am the one who submitted this agenda.`;
 
             try {
-                // Check if MetaMask is installed
-                if (typeof window.ethereum === 'undefined') {
-                    throw new Error('MetaMask is not installed');
-                }
-
-                // Request account access
-                const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-                const account = accounts[0];
-
-                // Request signature
                 const signature = await window.ethereum.request({
                     method: 'personal_sign',
-                    params: [message, account]
+                    params: [message, currentAccount]
                 });
 
-                // Display result
+                const signatureResult = document.getElementById('signatureResult');
                 signatureResult.style.display = 'block';
                 signatureResult.innerHTML = `
-                    <h3>Signature Generated Successfully!</h3>
-                    <p><strong>Signature:</strong></p>
-                    <div class="signature-text">${signature}</div>
-                    <p>Copy this signature and include it in your metadata file under the <code>creator.signature</code> field.</p>
+                    <h3>Signature Generated:</h3>
+                    <p><strong>Message:</strong><br>${message}</p>
+                    <p><strong>Signature:</strong><br>${signature}</p>
+                    <p><strong>Connected Address:</strong><br>${currentAccount}</p>
                 `;
             } catch (error) {
-                signatureResult.style.display = 'block';
-                signatureResult.innerHTML = `
-                    <div class="error">
-                        <h3>Error</h3>
-                        <p>${error.message}</p>
-                    </div>
-                `;
+                console.error('Error signing message:', error);
+                alert('Failed to sign message. Please try again.');
             }
         }
+
+        // Check if wallet is already connected
+        if (typeof window.ethereum !== 'undefined') {
+            window.ethereum.request({ method: 'eth_accounts' })
+                .then(accounts => {
+                    if (accounts.length > 0) {
+                        currentAccount = accounts[0];
+                        document.getElementById('walletAddress').textContent = currentAccount;
+                        document.getElementById('signButton').disabled = false;
+                        document.getElementById('connectButton').textContent = 'Connected';
+                        document.getElementById('connectButton').disabled = true;
+                    }
+                });
+
+            // Listen for account changes
+            window.ethereum.on('accountsChanged', function (accounts) {
+                if (accounts.length === 0) {
+                    currentAccount = null;
+                    document.getElementById('walletAddress').textContent = 'Not connected';
+                    document.getElementById('signButton').disabled = true;
+                    document.getElementById('connectButton').textContent = 'Connect Wallet';
+                    document.getElementById('connectButton').disabled = false;
+                } else {
+                    currentAccount = accounts[0];
+                    document.getElementById('walletAddress').textContent = currentAccount;
+                    document.getElementById('signButton').disabled = false;
+                    document.getElementById('connectButton').textContent = 'Connected';
+                    document.getElementById('connectButton').disabled = true;
+                }
+            });
+        }
+
+        document.getElementById('connectButton').addEventListener('click', connectWallet);
+        document.getElementById('signButton').addEventListener('click', signMessage);
     </script>
 </body>
 </html>
